Rewrite actual templates with subdevices.
Subdevices syntax is deprecated 3 years ago. There are several actual templates using the syntax. Rewrite them with conditions.

Updated templates:
      - Wb-MAI11;
      - WM-MRGBDW-D (fw prior to version 3);
      - WB-MS v.2;
      - WBE2-I-EBUS;
      - WBE2-I-OPENTHERM fw1.3 and fw1.4.

This is a part of dropping subdevices support.

--- a/templates/config-wb-mai11-deprecated.json
+++ b/templates/config-wb-mai11-deprecated.json
@@ -2,6 +2,7 @@
     "title": "WB-MAI11_template_title",
     "device_type": "WB-MAI11",
     "group": "g-wb",
+    "deprecated": true,
     "device": {
         "name": "WB-MAI11",
         "id": "wb-mai11",
