--- a/templates/config-wbe2-i-ebus.json
+++ b/templates/config-wbe2-i-ebus.json
@@ -1,6 +1,6 @@
 {
     "title": "WBE2-I-EBUS_template_title",
-    "device_type": "WBE2-I-EBUS",
+    "device_type": "tpl1_web2_i_ebus",
     "group": "g-wb",
     "device": {
         "name": "WBE2-I-EBUS",
@@ -19,6 +19,86 @@
             {
                 "title": "HW Info",
                 "id": "hw_info"
+            },
+            {
+                "title": "Heating Settings",
+                "id": "heating_settings"
+            }
+        ],
+
+        "setup": [
+            {
+                "title": "disable direct heating control",
+                "address": 203,
+                "reg_type": "holding",
+                "value": 0
+            },
+            {
+                "title": "enable direct heating control",
+                "address": 205,
+                "reg_type": "holding",
+                "value": 0,
+                "condition": "(heating_options==0)||(heating_options==3)"
+            },
+            {
+                "title": "enable room sensor",
+                "address": 208,
+                "reg_type": "holding",
+                "value": 0,
+                "condition": "heating_options==1"
+            },
+            {
+                "title": "enable outdoor sensor",
+                "address": 208,
+                "reg_type": "holding",
+                "value": 1,
+                "condition": "heating_options==2"
+            },
+        ],
+
+        "parameters": [
+            {
+                "id": "heating_options",
+                "title": "Heating Settings",
+                "enum": [
+                    1,
+                    2,
+                    0,
+                    3
+                ],
+                "enum_titles": [
+                    "Room Temperature Sensor",
+                    "Outdoor Temperature Sensor",
+                    "Direct Heating Setpoint Control",
+                    "Heating Off"
+                ],
+                "default": 1,
+                "required": true,
+                "order": 1,
+                "group": "heating_settings",
+                "readonly": true
+            },
+            {
+                "id": "climate_curve_number",
+                "title": "Climate Curve Number",
+                "address": 207,
+                "reg_type": "holding",
+                "enum": [
+                    1, 2, 3, 4, 5,
+                    6, 7, 8, 9, 10,
+                    11, 12, 13, 14, 15,
+                    16, 17, 18, 19
+                ],
+                "enum_titles": [
+                    "1", "2", "3", "4", "5",
+                    "6", "7", "8", "9", "10",
+                    "11", "12", "13", "14", "15",
+                    "16", "17", "18", "19"
+                ],
+                "default": 1,
+                "order": 2,
+                "group": "heating_settings",
+                "condition": "heating_options==2"
             }
         ],
 
@@ -129,17 +209,6 @@
                 "group": "hot_water_settings"
             },
             {
-                "name": "Heating Settings",
-                "id": "",
-                "oneOf": [
-                    "room_sensor",
-                    "outdoor_sensor",
-                    "direct_heating_control",
-                    "heating_off"
-                ],
-                "device_type": "room_sensor"
-            },
-            {
                 "name": "FW Version",
                 "address": 204,
                 "reg_type": "input",
@@ -147,203 +216,91 @@
                 "format": "u16",
                 "scale": 0.01,
                 "group": "hw_info"
+            },
+            {
+                "name": "Temperature Sensor Type",
+                "address": 208,
+                "reg_type": "holding",
+                "type": "value",
+                "readonly": true,
+                "group": "heating_settings",
+                "condition": "heating_options==1"
+            },
+            {
+                "name": "Heating Setpoint",
+                "address": 203,
+                "reg_type": "holding",
+                "type": "value",
+                "units": "deg C",
+                "format": "u16",
+                "min": 0,
+                "max": 85,
+                "readonly": true,
+                "group": "heating_settings",
+                "condition": "(heating_options==1)||(heating_options==2)||(heating_options==3)"
+            },
+            {
+                "name": "Room Temperature",
+                "address": 206,
+                "reg_type": "holding",
+                "type": "value",
+                "units": "deg C",
+                "format": "s16",
+                "scale": 0.1,
+                "offset": -100,
+                "min": -50,
+                "max": 50,
+                "group": "heating_settings",
+                "condition": "heating_options==1"
+            },
+            {
+                "name": "Outdoor Temperature",
+                "address": 206,
+                "reg_type": "holding",
+                "type": "value",
+                "units": "deg C",
+                "format": "s16",
+                "scale": 0.1,
+                "offset": -100,
+                "min": -50,
+                "max": 50,
+                "group": "heating_settings",
+                "condition": "heating_options==2"
+            },
+            {
+                "name": "Room Temperature Setpoint",
+                "address": 205,
+                "reg_type": "holding",
+                "type": "value",
+                "units": "deg C",
+                "format": "u16",
+                "min": 0,
+                "max": 35,
+                "group": "heating_settings",
+                "condition": "heating_options==1"
+            },
+            {
+                "name": "Heating Status",
+                "reg_type": "holding",
+                "address": 205,
+                "type": "switch",
+                "group": "heating_settings",
+                "condition": "heating_options==2"
+            },
+            {
+                "name": "Heating Setpoint",
+                "address": 203,
+                "reg_type": "holding",
+                "type": "value",
+                "units": "deg C",
+                "format": "u16",
+                "min": 0,
+                "max": 85,
+                "group": "heating_settings",
+                "condition": "heating_options==0"
             }
         ],
 
-        "subdevices": [
-            {
-                "title": "Room Temperature Sensor",
-                "device_type": "room_sensor",
-                "device": {
-                    "setup": [
-                        {
-                            "title": "disable direct heating control",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "value": 0
-                        },
-                        {
-                            "title": "enable room sensor",
-                            "address": 208,
-                            "reg_type": "holding",
-                            "value": 0
-                        }
-                    ],
-                    "channels": [
-                        {
-                            "name": "Temperature Sensor Type",
-                            "address": 208,
-                            "reg_type": "holding",
-                            "type": "value",
-                            "readonly": true
-                        },
-                        {
-                            "name": "Heating Setpoint",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "u16",
-                            "min": 0,
-                            "max": 85,
-                            "readonly": true
-                        },
-                        {
-                            "name": "Room Temperature",
-                            "address": 206,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "s16",
-                            "scale": 0.1,
-                            "offset": -100,
-                            "min": -50,
-                            "max": 50
-                        },
-                        {
-                            "name": "Room Temperature Setpoint",
-                            "address": 205,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "u16",
-                            "min": 0,
-                            "max": 35
-                        }
-                    ]
-                }
-            },
-            {
-                "title": "Outdoor Temperature Sensor",
-                "device_type": "outdoor_sensor",
-                "device": {
-                    "setup": [
-                        {
-                            "title": "disable direct heating control",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "value": 0
-                        },
-                        {
-                            "title": "enable outdoor sensor",
-                            "address": 208,
-                            "reg_type": "holding",
-                            "value": 1
-                        }
-                    ],
-                    "parameters": {
-                        "climate_curve_number": {
-                            "title": "Climate Curve Number",
-                            "address": 207,
-                            "reg_type": "holding",
-                            "enum": [
-                                1, 2, 3, 4, 5,
-                                6, 7, 8, 9, 10,
-                                11, 12, 13, 14, 15,
-                                16, 17, 18, 19
-                            ],
-                            "enum_titles": [
-                                "1", "2", "3", "4", "5",
-                                "6", "7", "8", "9", "10",
-                                "11", "12", "13", "14", "15",
-                                "16", "17", "18", "19"
-                            ],
-                            "default": 1
-                        }
-                    },
-                    "channels": [
-                        {
-                            "name": "Temperature Sensor Type",
-                            "address": 208,
-                            "reg_type": "holding",
-                            "type": "value",
-                            "readonly": true
-                        },
-                        {
-                            "name": "Outdoor Temperature",
-                            "address": 206,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "s16",
-                            "scale": 0.1,
-                            "offset": -100,
-                            "min": -50,
-                            "max": 50
-                        },
-                        {
-                            "name": "Heating Setpoint",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "u16",
-                            "min": 0,
-                            "max": 85,
-                            "readonly": true
-                        },
-                        {
-                            "name": "Heating Status",
-                            "reg_type": "holding",
-                            "address": 205,
-                            "type": "switch"
-                        }
-                    ]
-                }
-            },
-            {
-                "title": "Direct Heating Setpoint Control",
-                "device_type": "direct_heating_control",
-                "device": {
-                    "setup": [
-                        {
-                            "title": "enable direct heating control",
-                            "address": 205,
-                            "reg_type": "holding",
-                            "value": 0
-                        }
-                    ],
-                    "channels": [
-                        {
-                            "name": "Heating Setpoint",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "u16",
-                            "min": 0,
-                            "max": 85
-                        }
-                    ]
-                }
-            },
-            {
-                "title": "Heating Off",
-                "device_type": "heating_off",
-                "device": {
-                    "setup": [
-                        {
-                            "title": "enable direct heating control",
-                            "address": 205,
-                            "reg_type": "holding",
-                            "value": 0
-                        },
-                        {
-                            "title": "disable heating",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "value": 0
-                        }
-                    ],
-                    "channels": [
-                        {
-                            "name": "Heating Setpoint",
-                            "address": 203,
-                            "reg_type": "holding",
-                            "type": "temperature",
-                            "format": "u16",
-                            "min": 0,
-                            "max": 85,
-                            "readonly": true
-                        }
-                    ]
-                }
-            }
-        ],
         "translations": {
             "en": {
                 "WBE2-I-EBUS_template_title": "WBE2-I-EBUS (eBus boiler interface)"
@@ -353,33 +310,31 @@
                 "Boiler State": "Состояние котла",
                 "Hot Water Settings": "Параметры ГВС",
                 "HW Info": "Данные модуля",
+                "Boiler Status": "Состояние контуров котла",
                 "Error Code": "Код ошибки",
-                "Hot Water Temperature": "Температура ГВС",
+                "Hot Water Temperature": "t° ГВС",
+                "Heating Temperature": "t° подачи отопления",
+                "Heating Return Water Temperature": "t° обратной воды отопления",
                 "External Storage Water Temperature": "Температура ГВС внешнего накопителя",
-                "Heating Temperature": "Температура подачи отопления",
-                "Heating Return Water Temperature": "Температура обратной воды отопления",
-                "Boiler Outdoor Temperature Sensor": "Уличная температура (датчик котла)",
-                "Hot Water Setpoint Max": "Максимальное значение температуры ГВС",
-                "Water Pressure": "Давление",
+                "Water Pressure": "Давление воды",
+                "Boiler Outdoor Temperature Sensor": "Уличная t° - датчик котла",
+                "Hot Water Setpoint Max": "Максимальная уставка ГВС",
                 "Burner Modulation Level" : "Модуляция котла",
-                "Invalid Connection": "Ошибка связи с котлом",
-                "Boiler Status" : "Состояние контуров котла",
                 "Hot Water Setpoint": "Уставка ГВС",
                 "Heating Settings": "Параметры отопления",
                 "FW Version": "Версия прошивки",
-
+                "Invalid Connection": "Ошибка связи с котлом",
                 "Room Temperature Sensor": "Датчик комнатной температуры",
                 "Temperature Sensor Type": "Тип датчика температуры",
                 "Heating Setpoint": "Уставка отопления",
-                "Room Temperature": "Комнатная температура",
-                "Room Temperature Setpoint": "Уставка комнатной температуры",
-
+                "Room Temperature": "Комнатная t°",
+                "Room Temperature Setpoint": "Уставка комнатной t°",
                 "Outdoor Temperature Sensor": "Датчик уличной температуры",
                 "Climate Curve Number": "Номер климатической кривой",
                 "Outdoor Temperature": "Уличная температура",
                 "Heating Status": "Статус отопления",
-
                 "Direct Heating Setpoint Control": "Управление уставкой отопления",
+
                 "Heating Off": "Отопление отключено"
             }
         }
